--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="calculator">
-        <input type="text" id="result" readonly>
+        <input type="text" id="resul" readonly>
         <div class="buttons">
             <button class="clear">C</button>
             <button class="operator">/</button>
